[package]
name = "ssdm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"

# worker + wasm-only helpers; host `cargo test` skips these.
[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { version = "0.8", features = ["queue"] }
futures-util = "0.3"

[profile.release]
opt-level = "s"
lto = true
