[package]
name = "ssdm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssdm"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusty-s3 = "0.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
